--- a/my_website/about.html
+++ b/my_website/about.html
@@ -7,8 +7,8 @@
 	  <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <a href="about.html">Portfolio</a>
-    <h1>This is my Portfolio Page!</h1>
+    <a href="about.html">about</a>
+    <h1>This is my about me Page!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
